# recipe-manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: abn-amro-dev-ci.yml  ci.yml
alembic/: env.py
alembic/versions/: 0e80b1b4dd26_add_fts_gin_index_on_recipes_.py  78aa2d228591_initial_schema.py
app/: main.py
app/api/v1/: deps.py
app/api/v1/routers/: auth.py  health.py  recipes.py
app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: redis.py  session.py
app/models/: ingredient.py  recipe.py  user.py
app/repositories/: base.py  recipe_repository.py  user_repository.py
app/schemas/: auth.py  recipe.py
app/services/: auth_service.py  recipe_service.py
docs/: architecture.md
docs/adr/: 0001-framework-choice.md  0002-database-choice.md  0003-jwt-auth-redis-blacklist.md  0004-layered-architecture-unit-of-work.md  0005-single-instance-deployment.md
tests/: conftest.py
tests/integration/: conftest.py  test_auth.py  test_filtering.py  test_health.py  test_recipes.py
tests/unit/: test_auth_service.py  test_recipe_schemas.py  test_schemas_auth.py  test_security.py
